# Turkish-Syllable

./: .gitignore  README.md  local_test.py  pyproject.toml  roadmap.md  setup.py  test.py
.github/workflows/: build.yml
C/: Makefile  README.md  example_usage.py  input.txt  output.txt
C/include/: syllable.h
C/src/: syllable.c  syllable_processor.c
C/wrapper/: csyllable_tr.py
Python/: README.md  turkish_syllable.py  usage_example.py
tests/: input.txt  output.txt
turkish_syllable/: syllable.c
