[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turkish-syllable"
version = "0.2.22"
authors = [
  { name = "Ahmet Ozdemir", email = "ahmetozdemiir.ao@gmail.com" },
]
description = "A Turkish syllable splitter implemented in C with Python bindings"
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
]

[tool.setuptools]
packages = ["turkish_syllable"]
package-data = { "turkish_syllable" = ["libsyllable.*"] }

[tool.setuptools.ext-modules]
# C uzantısını tanımlıyoruz
"turkish_syllable.libsyllable" = { sources = ["turkish_syllable/syllable.c"], include-dirs = ["include"] }

[project.urls]
Homepage = "https://github.com/ahmetozdemirrr/Turkish-Syllable"
Issues = "https://github.com/ahmetozdemirrr/Turkish-Syllable/issues"