[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turkish-syllable"
version = "0.2.27"
authors = [
  { name = "Ahmet Ozdemir", email = "ahmetozdemiir.ao@gmail.com" },
]
description = "A Turkish syllable splitter implemented in C with Python bindings"
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
]

[tool.setuptools]
packages = ["turkish_syllable"]
package-data = { "turkish_syllable" = ["libsyllable.*"] }

[[tool.setuptools.ext-modules]]
name = "turkish_syllable.libsyllable"
sources = ["turkish_syllable/syllable.c"]
include-dirs = ["include"]
extra-compile-args = []

[project.urls]
Homepage = "https://github.com/ahmetozdemirrr/Turkish-Syllable"
Issues = "https://github.com/ahmetozdemirrr/Turkish-Syllable/issues"